# multi-wechat-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs  process.rs  system.rs  utils.rs  winapi.rs
src/macos/: cli.rs  config.json  config.rs  macho.rs  mod.rs  patcher.rs
src/windows/: mod.rs  process.rs  system.rs  utils.rs
