[package]
name = "multi-wechat-rs"
description = "一个完全由Rust实现的微信多开工具。"
license = "AL2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntapi = "0.3.6"

[dependencies.winapi]
version = "0.3.9"
features = [
    "memoryapi",
    "minwindef",
    "ntdef",
    "tlhelp32",
    "psapi",
    "winreg", 
    "winbase",
    "winuser",
    "securitybaseapi",
    "impl-default",
    "processthreadsapi",
    "handleapi"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"