[package]
name = "multi-wechat-rs"
description = "一个完全由Rust实现的微信多开工具。"
license = "Apache-2.0"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
ntapi = "0.3.6"
winapi = { version = "0.3.9", features = [
    "memoryapi",
    "minwindef",
    "ntdef",
    "tlhelp32",
    "psapi",
    "winreg",
    "winbase",
    "winuser",
    "securitybaseapi",
    "impl-default",
    "processthreadsapi",
    "handleapi",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
